--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h1 class="h1 text-bold">
           One-Stop Travel Agent for your holiday needs!
         </h1>
-        <p class="h2 text-bold">Your happiness is our happiness!</p>
+        <h2 class="h2 text-bold">Your happiness is our happiness!</h2>
       </header>
 
       <!-- Headline Content -->
@@ -44,13 +44,6 @@
             <div class="autoslide-image"></div>
             <div class="client-testimony">
               <p id="Testimony" class="text-base text-italic"></p>
-              <div class="client-profile">
-                <div class="client-picture"></div>
-                <div class="client-profile-detail">
-                  <p id="client-name-age" class="text-bold"></p>
-                  <p id="client-occupation" class="text-italic"></p>
-                </div>
-              </div>
             </div>
           </div>
 
